remove unnecessary files

--- a/ICCS340 Homework 1/index.html
+++ b/ICCS340 Homework 1/index.html
@@ -64,17 +64,6 @@
         <li>
             <a class="menu-item page-scroll" href="#contact">Contact</a>
         </li>
-        <li class="menu-footer">
-            <!-- <h6><i class="lnr lnr-download"></i>Download CV</h6> -->
-            <span>
-                <a href="#">ENGLISH</a>
-                <a href="#">THAI</a>
-                <a href="#">GERMAN</a>
-                <a href="#">HINDI</a>
-                <a href="#">PUNJABI</a>
-
-            </span>
-        </li>
     </ul>
 </div>
 <!-- / side navigation -->
@@ -89,7 +78,6 @@
         <header id="home">
             <div class="header-content">
                 <h2>Hello<span class="text-primary">.</span> I am <span class="text-primary">Arun Bhusri</span></h2>
-                <!-- <h5><span class="text-primary">Graphic / Web Designer</span></h5> -->
                 <h5>Photographer<span class="text-primary"> / </span>Web Designer</h5>
                 <p>What's up my friends. Hope ya all doing great. I'm Arun. If ya all looking for a web designer, I'm here to solve your problems.</p>
             </div>
@@ -101,7 +89,6 @@
             <div class="container">
                 <div class="page-header space-left">
                     <h3>About<span class="text-primary">.</span></h3>
-                    <!-- <h6>Fluent in English, Thai, Hindi, Punjabi and German</h4> -->
                 </div>
                 <div class="row">
                     <div class="col-md-4 feature-left space-bottom">
@@ -436,14 +423,31 @@
                         <div class="timeline-point  off-timeline-point  point-color"></div>
                         <div class="row">
                             <div class="col-md-3 timeline-info">
-                                <p class="timeline-date">2013-2014</p>
-                                <h4 class="timeline-com">Creative Agency</h4>
+                                <p class="timeline-date">2015-2016</p>
+                                <h4 class="timeline-com">Snake Game</h4>
+                                <h6 class="timeline-role">Game Developer</h6>
+                                <p class="timeline-location">Salaya, TH</p>
+                            </div><!-- / timeline-info -->
+                            <div class="col-md-9 timeline-details">
+                                <p>
+                                Created a snake game for Intermediate Computer Programming project using Java and Swing.
+                                </p>
+                            </div><!-- / timeline-details -->
+                        </div><!-- / row -->
+                    </div><!-- / timeline-item -->
+
+                    <div class="timeline-item">
+                        <div class="timeline-point  off-timeline-point  point-color"></div>
+                        <div class="row">
+                            <div class="col-md-3 timeline-info">
+                                <p class="timeline-date">2015-2016</p>
+                                <h4 class="timeline-com">Online System</h4>
                                 <h6 class="timeline-role">Graphic Designer</h6>
-                                <p class="timeline-location">New York, NY</p>
+                                <p class="timeline-location">Salaya, TH</p>
                             </div><!-- / timeline-info -->
                             <div class="col-md-9 timeline-details">
                                 <p>
-                                Quisque eu eleifend sapien. Sed et eros non nibh eleifend tempus. Sed rhoncus mauris in tellus viverra, in molestie turpis feugiat. Fusce massa massa, convallis ut elit ac, dictum porta odio. Aenean viverra neque id turpis maximus cursus. Etiam vitae mi eros. Duis vestibulum orci ex, in vulputate.
+                                I was a User-Interface designer for System Analysis and Design project. We were assigned to make an online system for a food delivery service company.
                                 </p>
                             </div><!-- / timeline-details -->
                         </div><!-- / row -->
@@ -453,31 +457,14 @@
                         <div class="timeline-point  off-timeline-point  point-color"></div>
                         <div class="row">
                             <div class="col-md-3 timeline-info">
-                                <p class="timeline-date">2014-2015</p>
-                                <h4 class="timeline-com">Tech Co</h4>
-                                <h6 class="timeline-role">Web Developer</h6>
-                                <p class="timeline-location">New York, NY</p>
+                                <p class="timeline-date">2015-2016</p>
+                                <h4 class="timeline-com">Data Communication and Networks</h4>
+                                <h6 class="timeline-role">Programmer</h6>
+                                <p class="timeline-location">Salaya, TH</p>
                             </div><!-- / timeline-info -->
                             <div class="col-md-9 timeline-details">
                                 <p>
-                                Quisque eu eleifend sapien. Sed et eros non nibh eleifend tempus. Sed rhoncus mauris in tellus viverra, in molestie turpis feugiat. Fusce massa massa, convallis ut elit ac, dictum porta odio. Aenean viverra neque id turpis maximus cursus. Etiam vitae mi eros. Duis vestibulum orci ex, in vulputate.
-                                </p>
-                            </div><!-- / timeline-details -->
-                        </div><!-- / row -->
-                    </div><!-- / timeline-item -->
-
-                    <div class="timeline-item">
-                        <div class="timeline-point  off-timeline-point  point-color"></div>
-                        <div class="row">
-                            <div class="col-md-3 timeline-info">
-                                <p class="timeline-date">2015-Present</p>
-                                <h4 class="timeline-com">Best Com</h4>
-                                <h6 class="timeline-role">Web Designer</h6>
-                                <p class="timeline-location">Miami, FL</p>
-                            </div><!-- / timeline-info -->
-                            <div class="col-md-9 timeline-details">
-                                <p>
-                                Quisque eu eleifend sapien. Sed et eros non nibh eleifend tempus. Sed rhoncus mauris in tellus viverra, in molestie turpis feugiat. Fusce massa massa, convallis ut elit ac, dictum porta odio. Aenean viverra neque id turpis maximus cursus. Etiam vitae mi eros. Duis vestibulum orci ex, in vulputate.
+                                For Data Communication and Networks, I was assigned to work on 3 projects. First project was making a HTTP resumable downloader using Python/Java. Second project was about attacking and defending a web server. The last project that I worked on was Local Area Network Single File transfer; basically transferring the files from master computer to other computers that are connected to the same network.
                                 </p>
                             </div><!-- / timeline-details -->
                         </div><!-- / row -->
@@ -496,7 +483,7 @@
                 </div>
 
                 <ul class="row portfolio list-unstyled" id="grid">
-                    <li class="col-xs-6 col-md-4 project" data-groups='["design", "creative"]'>
+                    <li class="col-xs-6 col-md-4 project" data-groups='["photography", "creative"]'>
                         <figure>
                             <div class="hovereffect">
                                 <img class="img-responsive" src="images/project1.jpg" alt="">
@@ -522,7 +509,7 @@
                         </figure>
                     </li><!-- project -->
 
-                    <li class="col-xs-6 col-md-4 project" data-groups='["design"]'>
+                    <li class="col-xs-6 col-md-4 project" data-groups='["photography"]'>
                         <figure>
                             <div class="hovereffect">
                                 <img class="img-responsive" src="images/project4.jpg" alt="">
@@ -531,7 +518,7 @@
                         </figure>
                     </li><!-- project -->
 
-                    <li class="col-xs-6 col-md-4 project" data-groups='["web-design", "creative"]'>
+                    <li class="col-xs-6 col-md-4 project" data-groups='["photography", "creative"]'>
                         <figure>
                             <div class="hovereffect">
                                 <img class="img-responsive" src="images/project5.jpg" alt="">
@@ -540,7 +527,7 @@
                         </figure>
                     </li><!-- project -->
 
-                    <li class="col-xs-6 col-md-4 project" data-groups='["web-design"]'>
+                    <li class="col-xs-6 col-md-4 project" data-groups='["photography"]'>
                         <figure>
                             <div class="hovereffect">
                                 <img class="img-responsive" src="images/project6.jpg" alt="">
@@ -564,12 +551,6 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 space-bottom">
-                        <!-- <div class="contact-description">
-                            <h5>Contact Description</h5>
-                            <p>Please use the contact information below to get in touch with me. Thanks!</p>
-                        </div><! / feature-description -->
-
-                        <!-- <div class="space-25">&nbsp;</div> -->
 
                         <div class="row">
                             <div class="col-sm-6 feature-left space-top">
@@ -614,32 +595,7 @@
                                 </div><!-- / feature-block -->
                             </div><!-- / col-sm-6 feature-left -->
                         </div><!-- / row -->
-
-                    </div><!-- / col-md-6 -->
-
-                    <!-- <div class="col-md-6"> -->
-                        <!-- contact form-->
-                        <!-- <div id="contact-form-1">
-                            <form id="contactForm" data-toggle="validator">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" id="name" placeholder="Full Name" required>
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" id="email" placeholder="Email" required>
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                                <div class="form-group">
-                                <textarea id="message" class="form-control" rows="5" placeholder="Message" required></textarea>
-                                <div class="help-block with-errors"></div>
-                                </div>
-                                <button type="submit" id="form-submit" class="btn btn-md btn-primary-filled btn-form-submit">Send Message</button>
-                                <div id="msgSubmit" class="h3 text-center hidden"></div>
-                                <div class="clearfix"></div>
-                            </form>
-                        </div><!/ contact form -->
-                    <!-- </div> -->
-                    <!-- / col-md-6 -->
+                  </div><!-- / col-md-6 -->
                 </div><!-- / row -->
             </div><!-- / container -->
         </section>
@@ -678,23 +634,6 @@ $(".sidebar-nav a").on("click", function(){
 });
 </script>
 <!-- / nav scroll -->
-
-<!-- contact form -->
-<!-- <script src="js/validator.min.js" type="text/javascript"></script>
-<script src="js/form-scripts.js" type="text/javascript"></script> -->
-<!-- / contact form -->
-
-<!-- facts counter -->
-<!-- <script src="js/jquery.countTo.js"></script>
- <script type="text/javascript">
-      $('.timer').countTo({
-        refreshInterval: 60,
-        formatter: function (value, options) {
-          return value.toFixed(options.decimals);
-        },
-      });
-</script> -->
-<!-- / facts counter -->
 
 <!-- portfolio script -->
 <script src="js/jquery.shuffle.min.js"></script>
