--- a/ICCS340 Homework 1/index.html
+++ b/ICCS340 Homework 1/index.html
@@ -14,7 +14,7 @@
 <!-- favicon -->
 <link rel="icon" href="images/a_logo.png">
 <!-- page title -->
-<title>MyWork - Resume Template</title>
+<title>MyResume - Arun Bhusri</title>
 <!-- bootstrap css -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- css -->
@@ -79,7 +79,7 @@
             <div class="header-content">
                 <h2>Hello<span class="text-primary">.</span> I am <span class="text-primary">Arun Bhusri</span></h2>
                 <h5>Photographer<span class="text-primary"> / </span>Web Designer</h5>
-                <p>What's up my friends. Hope ya all doing great. I'm Arun. If ya all looking for a web designer, I'm here to solve your problems.</p>
+                <p>Computer science student with experience in computer applications, web designing and photography. Capable and resourceful team player, is patient with complexity, and responsible. Consistently demonstrates academic ability with excellent oral and written communication skills. Interested in aviation, travelling and photography.</p>
             </div>
         </header>
         <!-- / header -->
@@ -384,7 +384,7 @@
                             </div><!-- / timeline-info -->
                             <div class="col-md-9 timeline-details">
                                 <p>
-                                Graduated from highschool in 2013.
+                                Graduated from highschool in 2013. Favorite classes were Programming, Physics, and Mathematics.
                                 </p>
                             </div><!-- / timeline-details -->
                         </div><!-- / row -->
@@ -401,7 +401,8 @@
                             </div><!-- / timeline-info -->
                             <div class="col-md-9 timeline-details">
                                 <p>
-                                ..
+                                Currently doing my bachelor degree of science in computer science.
+                                My favorite classes are Computer Security, Introduction to Programming, Intermediate Computer Programing, Elementary German I & II, System Analysis and Design, and Web Application Development.
                                 </p>
                             </div><!-- / timeline-details -->
                         </div><!-- / row -->
