Edit education description

--- a/ICCS340 Homework 1/index.html
+++ b/ICCS340 Homework 1/index.html
@@ -384,7 +384,7 @@
                             </div><!-- / timeline-info -->
                             <div class="col-md-9 timeline-details">
                                 <p>
-                                Graduated from highschool in 2013. Favorite classes were Programming, Physics, and Mathematics.
+                                Did my IGCSE's and 1 year A level before graduating from highschool in 2013. Favorite classes were Programming, Physics, and Mathematics.
                                 </p>
                             </div><!-- / timeline-details -->
                         </div><!-- / row -->
