--- a/ICCS340 Homework 1/index.html
+++ b/ICCS340 Homework 1/index.html
@@ -157,6 +157,51 @@
                 </div>
                 <!-- / facts -->
 
+                <!-- Hobbies -->
+                <div id="facts">
+                    <div class="page-header space-left">
+                        <h3>Hobbies<span class="text-primary">.</span></h3>
+                    </div>
+                    <div class="row">
+                        <!-- Hobbies -->
+                        <div class="col-md-4">
+                            <i class="fact-icon lnr lnr-rocket"></i>
+                            <h5 class="fact-title">Flight Simulator</h5>
+                        </div>
+                        <!-- /Hobbies -->
+
+                        <!-- Hobbies -->
+                        <div class="col-md-4">
+                            <i class="fact-icon lnr lnr-music-note"></i>
+                            <h5 class="fact-title">Music</h5>
+                        </div>
+                        <!-- /Hobbies -->
+
+                        <!-- Hobbies -->
+                        <div class="col-md-4">
+                            <i class="fact-icon lnr lnr-film-play"></i>
+                            <h5 class="fact-title">Movie</h5>
+                        </div>
+                        <!-- /Hobbies -->
+
+                        <!-- Hobbies -->
+                        <div class="col-md-4">
+                            <i class="fact-icon lnr lnr-bicycle"></i>
+                            <h5 class="fact-title">Cycling</h5>
+                        </div>
+                        <!-- /Hobbies -->
+
+                        <!-- Hobbies -->
+                        <div class="col-md-4">
+                            <i class="fact-icon lnr lnr-camera-video"></i>
+                            <h5 class="fact-title">Make Youtube videos</h5>
+                        </div>
+                        <!-- /Hobbies -->
+
+                    </div><!-- / row -->
+                </div>
+                <!-- / Hobbies -->
+
                 <section id="club">
                     <div class="container">
                         <div class="page-header">
