--- a/ICCS340 Homework 1/index.html
+++ b/ICCS340 Homework 1/index.html
@@ -8,9 +8,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="MyWork Resume">
-<meta name="keywords" content="resume bootstrap template, resume / cv html template, html5 / css3 resume" />
-<meta name="author" content="KingStudio.ro">
-
 <!-- favicon -->
 <link rel="icon" href="images/a_logo.png">
 <!-- page title -->
@@ -59,9 +56,6 @@
             <a class="menu-item page-scroll" href="#experience">Experience</a>
         </li>
         <li>
-            <a class="menu-item page-scroll" href="#portfolio">Portfolio</a>
-        </li>
-        <li>
             <a class="menu-item page-scroll" href="#contact">Contact</a>
         </li>
     </ul>
@@ -78,8 +72,8 @@
         <header id="home">
             <div class="header-content">
                 <h2>Hello<span class="text-primary">.</span> I am <span class="text-primary">Arun Bhusri</span></h2>
-                <h5>Photographer<span class="text-primary"> / </span>Web Designer</h5>
-                <p>Computer science student with experience in computer applications, web designing and photography. Capable and resourceful team player, is patient with complexity, and responsible. Consistently demonstrates academic ability with excellent oral and written communication skills. Interested in aviation, travelling and photography.</p>
+                <h5>Developer<span class="text-primary"> / </span>Web Designer</h5>
+                <p>Computer science student with experience in computer applications and web designing. Capable and resourceful team player, is patient with complexity, and responsible. Consistently demonstrates academic ability with excellent oral and written communication skills. Interested in aviation, travelling and photography.</p>
             </div>
         </header>
         <!-- / header -->
@@ -118,7 +112,7 @@
                             </div>
                             <h5>Address</h5>
                         </div>
-                        <p>1212 Setthasiri, Rachapruek, Soi Paknam Fung Nue 11, Khlong Chakpra, Talingchan, BKK, 10170</p>
+                        <p>180 Setthasiri, Rachapruek, Soi Paknam Fung Nue 11, Khlong Chakpra, Talingchan, BKK, 10170</p>
                       </div><!-- / feature -->
 
                 </div><!-- / row -->
@@ -136,23 +130,6 @@
                             <h3>1</h3>
                             <h5 class="fact-title">Websites Launched</h5>
                         </div>
-                        <!-- /fact -->
-
-                        <!-- fact -->
-                        <div class="col-md-4">
-                            <i class="fact-icon lnr lnr-pencil"></i>
-                            <h3>7</h3>
-                            <h5 class="fact-title">Logos Designed</h5>
-                        </div>
-                        <!-- /fact -->
-
-                        <!-- fact -->
-                        <div class="col-md-4">
-                            <i class="fact-icon lnr lnr-users"></i>
-                            <h3>2</h3>
-                            <h5 class="fact-title">Template Users</h5>
-                        </div>
-                        <!-- /fact -->
                     </div><!-- / row -->
                 </div>
                 <!-- / facts -->
@@ -461,7 +438,7 @@
         <section id="experience">
             <div class="container">
                 <div class="page-header">
-                    <h3>Work Experience<span class="text-primary">.</span></h3>
+                    <h3>Experience<span class="text-primary">.</span></h3>
                 </div>
                 <div class="timeline  border-color">
 
@@ -516,78 +493,47 @@
                         </div><!-- / row -->
                     </div><!-- / timeline-item -->
 
+                    <div class="timeline-item">
+                        <div class="timeline-point  off-timeline-point  point-color"></div>
+                        <div class="row">
+                            <div class="col-md-3 timeline-info">
+                                <p class="timeline-date">2017-current</p>
+                                <h4 class="timeline-com">Restaurant Finder App</h4>
+                                <h6 class="timeline-role">Web Application Developer</h6>
+                                <p class="timeline-location">Salaya, TH</p>
+                            </div><!-- / timeline-info -->
+                            <div class="col-md-9 timeline-details">
+                                <p>
+                                  Made a restaurant finder app. This app allows you to find restaurants near
+                                  you by clicking on any location, put in the keyword and then the markers
+                                  will pop up on map. I used Google Maps and Places API for this project.
+                                </p>
+                            </div><!-- / timeline-details -->
+                        </div><!-- / row -->
+                    </div><!-- / timeline-item -->
+
+                    <div class="timeline-item">
+                        <div class="timeline-point  off-timeline-point  point-color"></div>
+                        <div class="row">
+                            <div class="col-md-3 timeline-info">
+                                <p class="timeline-date">2017-current</p>
+                                <h4 class="timeline-com">Object-Oriented Design and Methodology</h4>
+                                <h6 class="timeline-role">Developer</h6>
+                                <p class="timeline-location">Salaya, TH</p>
+                            </div><!-- / timeline-info -->
+                            <div class="col-md-9 timeline-details">
+                                <p>
+                                  Was assigned to create a login page on your own website and host it on a server.
+                                  Currently working on "AviatoPrime"(project) with a team of 5 people.
+                                </p>
+                            </div><!-- / timeline-details -->
+                        </div><!-- / row -->
+                    </div>
+
                 </div><!-- / timeline -->
             </div><!-- / container -->
         </section>
         <!-- / experience -->
-
-        <!-- portfolio section 3col -->
-        <section id="portfolio">
-            <div class="container">
-                <div class="page-header space-left">
-                    <h3>Portfolio<span class="text-primary">.</span></h3>
-                </div>
-
-                <ul class="row portfolio list-unstyled" id="grid">
-                    <li class="col-xs-6 col-md-4 project" data-groups='["photography", "creative"]'>
-                        <figure>
-                            <div class="hovereffect">
-                                <img class="img-responsive" src="images/project1.jpg" alt="">
-                            </div>
-                        </figure>
-                    </li><!-- project -->
-
-                    <li class="col-xs-6 col-md-4 project" data-groups='["photography", "creative"]'>
-                        <figure>
-                            <div class="hovereffect">
-                                <img class="img-responsive" src="images/project2.jpg" alt="">
-
-                            </div>
-                        </figure>
-                    </li><!-- project -->
-
-                    <li class="col-xs-6 col-md-4 project" data-groups='["photography"]'>
-                        <figure>
-                            <div class="hovereffect">
-                                <img class="img-responsive" src="images/project3.jpg" alt="">
-
-                            </div>
-                        </figure>
-                    </li><!-- project -->
-
-                    <li class="col-xs-6 col-md-4 project" data-groups='["photography"]'>
-                        <figure>
-                            <div class="hovereffect">
-                                <img class="img-responsive" src="images/project4.jpg" alt="">
-
-                            </div>
-                        </figure>
-                    </li><!-- project -->
-
-                    <li class="col-xs-6 col-md-4 project" data-groups='["photography", "creative"]'>
-                        <figure>
-                            <div class="hovereffect">
-                                <img class="img-responsive" src="images/project5.jpg" alt="">
-
-                            </div>
-                        </figure>
-                    </li><!-- project -->
-
-                    <li class="col-xs-6 col-md-4 project" data-groups='["photography"]'>
-                        <figure>
-                            <div class="hovereffect">
-                                <img class="img-responsive" src="images/project6.jpg" alt="">
-
-                            </div>
-                        </figure>
-                    </li><!-- project -->
-
-                    <!-- sizer -->
-                    <li class="col-xs-6 col-md-4 shuffle_sizer"></li>
-                </ul><!-- / row portfolio-items -->
-            </div><!-- / container -->
-        </section>
-        <!-- / portfolio section 3col -->
 
         <!-- contact -->
         <section id="contact">
@@ -605,7 +551,7 @@
                                         <i class="lnr lnr-phone"></i>
                                     </div>
                                     <h5>Phone</h5>
-                                    <a>+66 89 876 5432</a>
+                                    <a>+66 81 567 7613</a>
                                 </div><!-- / feature-block -->
                             </div><!-- / col-md-6 feature-left -->
 
@@ -615,7 +561,7 @@
                                         <i class="lnr lnr-envelope"></i>
                                     </div>
                                     <h5>Email</h5>
-                                    <a class="contact-info-text">abhusri11+homework1@gmail.com</a>
+                                    <a class="contact-info-text">bhusriarun@gmail.com</a>
                                 </div><!-- / feature-block -->
                             </div><!-- / col-md-6 feature-left -->
                         </div><!-- / row -->
@@ -627,19 +573,9 @@
                                         <i class="lnr lnr-home"></i>
                                     </div>
                                     <h5>Home Address</h5>
-                                    <p>1212 Setthasiri, Rachapruek, Soi Paknam Fung Nue 11, Khlong Chakpra, Talingchan, BKK, 10170</p>
+                                    <p>180 Setthasiri, Rachapruek, Soi Paknam Fung Nue 11, Khlong Chakpra, Talingchan, BKK, 10170</p>
                                 </div><!-- / feature-block -->
                             </div><!-- / col-md-6 feature-left -->
-
-                            <div class="col-sm-6 feature-left space-top">
-                                <div class="feature block">
-                                    <div class="feature-icon">
-                                        <i class="lnr lnr-map-marker"></i>
-                                    </div>
-                                    <h5>Office Address</h5>
-                                    <p>1212 Setthasiri, Rachapruek, Soi Paknam Fung Nue 11, Khlong Chakpra, Talingchan, BKK, 10170</p>
-                                </div><!-- / feature-block -->
-                            </div><!-- / col-sm-6 feature-left -->
                         </div><!-- / row -->
                   </div><!-- / col-md-6 -->
                 </div><!-- / row -->
