--- a/ICCS340 Homework 1/index.html
+++ b/ICCS340 Homework 1/index.html
@@ -524,7 +524,62 @@
                             <div class="col-md-9 timeline-details">
                                 <p>
                                   Was assigned to create a login page on your own website and host it on a server.
-                                  Currently working on "AviatoPrime"(project) with a team of 5 people.
+                                </p>
+                            </div><!-- / timeline-details -->
+                        </div><!-- / row -->
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-point  off-timeline-point  point-color"></div>
+                        <div class="row">
+                            <div class="col-md-3 timeline-info">
+                                <p class="timeline-date">2017-current</p>
+                                <h4 class="timeline-com">Aviato</h4>
+                                <h6 class="timeline-role">Front-End and Cart Service</h6>
+                                <p class="timeline-location">Salaya, TH</p>
+                            </div><!-- / timeline-ionfo -->
+                            <div class="col-md-9 timeline-details">
+                                <p>
+                                  This is was the final project of Object Oriented Programming class. We're assigned to work
+                                  with a team of 5 people. Aviato is an online marketplace for buying and selling products.
+                                </p>
+                            </div><!-- / timeline-details -->
+                        </div><!-- / row -->
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-point  off-timeline-point  point-color"></div>
+                        <div class="row">
+                            <div class="col-md-3 timeline-info">
+                                <p class="timeline-date">2017-current</p>
+                                <h4 class="timeline-com">Game Lounge App/h4>
+                                <h6 class="timeline-role">Web Application Developer</h6>
+                                <p class="timeline-location">Salaya, TH</p>
+                            </div><!-- / timeline-info -->
+                            <div class="col-md-9 timeline-details">
+                                <p>
+                                  This was the second project of Web Application Development course. This application allows user
+                                  to post anything about gaming, user can also comment and follow other user. Worked on this project with
+                                  my friend. We used ruby, bootstrap and heroku for this project.
+                                </p>
+                            </div><!-- / timeline-details -->
+                        </div><!-- / row -->
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-point  off-timeline-point  point-color"></div>
+                        <div class="row">
+                            <div class="col-md-3 timeline-info">
+                                <p class="timeline-date">2017-current</p>
+                                <h4 class="timeline-com">My DropBox App/h4>
+                                <h6 class="timeline-role">Developer</h6>
+                                <p class="timeline-location">Salaya, TH</p>
+                            </div><!-- / timeline-info -->
+                            <div class="col-md-9 timeline-details">
+                                <p>
+                                  This was an assignment from PROFESSIONAL PRACTICES OF NETWORK class. We had to
+                                  make a DropBox like application. This is a command line based application.
+                                  Used AWS for user table and storing files.
                                 </p>
                             </div><!-- / timeline-details -->
                         </div><!-- / row -->
